--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bohdana Halenko</title>
+    <title>Konstantynov Oleksii</title>
     <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
@@ -23,7 +23,7 @@
             </nav>
             <ul class="contacts">
                 <li class="contacts__item">
-                    <a href="mailto:info@devstudio.com" class="contacts__link" target="_blank">
+                    <a href="mailto:alexkonstantinovsvk@gmail.com" class="contacts__link" target="_blank">
                         <img class="contacts__img" src="./image/email.svg" alt="" width="27px" height="27px">
                     </a>
                 </li>
@@ -33,7 +33,7 @@
                     </a>
                 </li>
                 <li class="contacts__item">
-                    <a href="https://www.linkedin.com/in/bohdanahalenko/" class="contacts__link" target="_blank">
+                    <a href="www.linkedin.com/in/oleksiikonstantynovsvk" class="contacts__link" target="_blank">
                         <img class="contacts__img" src="./image/linkedin.svg" alt="" width="27px" height="27px">
                     </a>
                 </li>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="hero__box">
                     <h1 class="hero__title">Hi, I'm Oleksii, a front-end developer!</h1>
-                    <p class="hero__text">I am a Front-end Developer and master HTML5, CSS3, JavaScript, React, Node.js. I have
+                    <p class="hero__text">I am a Front-end Developer and master HTML5, CSS3, JavaScript, React. Plus, I'm in the process of learning Node.js right now. I have
                     experience with implementing both individual and team projects. I'm always open to learning about new opportunities. 
                     It's important to me to grow as a Full-stack developer and put into practice my knowledge in all stack. </p>
                 </div>
@@ -66,20 +66,9 @@
                     <img src="./image/js.svg" alt="JavaScript" width="54px">
                     <img src="./image/react.svg" alt="React" width="54px">
                     <img src="./image/node.js.svg" alt="Node.js" width="54px">
-                    <img src="./image/mongoDB.svg" alt="MongoDB" width="100px">
                     <img src="./image/github.svg" alt="GitHub" width="54px">
                 </div>
             </div>
-            <!-- <div class="projects__wrapper">
-                <p class="technology__title">You can see my projects</p>
-                <div class="button__wrapper">
-                    <a href="./projects.html">
-                        <button class="button__box"><span class="button__text">Projects</span></button>
-                    </a>
-                    <!-- <div class="button__shedow"></div> -->
-                <!-- </div> -->
-                <!-- <img src="./image/confetti-btn.svg" alt=""> -->
-            <!-- </div> -->
         </section>
 
         <!-- Projects-->
@@ -88,24 +77,16 @@
             <h2 class="projects__title">You can see my projects</h2>
             <ul class="projects__list">
                 <li class="projects__item">
-                    <a href="https://bohdana-halenko.github.io/Filmoteka-team-project/" class="project__link" target="_blank">
+                    <a href="https://goddet1.github.io/Filmoteka/" class="project__link" target="_blank">
                         <img class="projects__img" src="./image/project1.png" alt="Filmoteka" width="300px">
                         <p class="projects__text">A website designed for women to lose weight.
                             Used: HTML, CSS, JS,
                             Parcel
                         </p>
                     </a>
-                </li>
-                <li class="projects__item">
-                    <a href="https://imakojda.github.io/Frontend-Project-SlimMom/" class="project__link" target="_blank">
-                        <img class="projects__img" src="./image/project9.png" alt="SlimMom" width="300px">
-                        <p class="projects__text">Multi-page movie search site.
-                            Used: NodeJS, React, Redux
-                        </p>
-                    </a>
                 </li> 
                 <li class="projects__item">
-                    <a href="https://danrafalsky.github.io/ice-cream-team-project/" class="project__link" target="_blank">
+                    <a href="https://alexeysvk.github.io/team-project-group21/" class="project__link" target="_blank">
                         <img class="projects__img" src="./image/project2.png" alt="Ice-cream project" width="300px">
                         <p class="projects__text">A website with a responsive layout. Team project, I played the role of Team Lead. Site for reviewing a web studio and
                             ordering services. Used:
@@ -114,7 +95,7 @@
                     </a>
                 </li>
                 <li class="projects__item">
-                    <a href="https://bohdana-halenko.github.io/goit-markup-hw-08/" class="project__link" target="_blank">
+                    <a href="https://alexeysvk.github.io/goit-markup-hw-08/" class="project__link" target="_blank">
                         <img class="projects__img" src="./image/project4.png" alt="WebStudio" width="300px">
                         <p class="projects__text">A website with a responsive layout. Site for reviewing a web studio and
                             ordering services. Used:
@@ -123,7 +104,7 @@
                     </a>
                 </li>
                 <li class="projects__item">
-                    <a href="https://phonebook-hb1.netlify.app/" class="project__link" target="_blank">
+                    <a href="https://alexeysvk.github.io/goit-react-hw-08-phonebook/" class="project__link" target="_blank">
                         <img class="projects__img" src="./image/project6.png" alt="Phonebook" width="300px">
                         <p class="projects__text">Creating a REST API application to work with a collection of contacts with the
                             ability to register.
@@ -132,7 +113,7 @@
                     </a>
                 </li>
                 <li class="projects__item">
-                    <a href="https://bohdana-halenko.github.io/goit-react-hw-04-images/" class="project__link" target="_blank">
+                    <a href="https://alexeysvk.github.io/goit-react-hw-04-images/" class="project__link" target="_blank">
                         <img class="projects__img" src="./image/project7.png" alt="Search images" width="300px">
                         <p class="projects__text">Search for images by title. Used: HTML, CSS, JS, React
                         </p>
@@ -148,7 +129,7 @@
                <div class="education__list">
                 <h4 class="education__name">IT school GoIT (online)</h4> 
                 <p>Full Stack Developer</p>
-                <p>December 2021 — September 2022</p>
+                <p>December 2021 — 2022</p>
                </div>
                <div class="education__list">
                 <h4 class="education__name">National Academy of the National Guard of Ukraine</h4>
@@ -169,11 +150,11 @@
                             </a>
                         </li>
                         <li class="contact__item">
-                            <a href="https://www.linkedin.com/in/bohdanahalenko/" class="contact__link" target="_blank">
+                            <a href="www.linkedin.com/in/oleksiikonstantynovsvk" class="contact__link" target="_blank">
                                 <div class="contact__item-icon-wrapper">
                                     <img class="contacts__img" src="./image/linkedin.svg" alt="" width="27px" height="27px">
                                 </div>
-                                <span class="contact__text">Bohdana Halenko | LinkedIn</span>
+                                <span class="contact__text">Konstantinov Oleksii | LinkedIn</span>
                             </a>
                         </li>
                         <li class="contact__item">
