--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </a>
                         </li>
                         <li class="contact__item">
-                            <a href="halenkobohdana@gmail.com" class="contact__link" target="_blank">
+                            <a href="mailto:alexkonstantinovsvk@gmail.com" class="contact__link" target="_blank">
                                 <div class="contact__item-icon-wrapper">
                                     <img class="contacts__img" src="./image/email.svg" alt="" width="27px" height="27px">
                                 </div>
